--- a/Spring/Springdemo/Springdemo/src/main/resources/templates/nombres.html
+++ b/Spring/Springdemo/Springdemo/src/main/resources/templates/nombres.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Bootstrap Example</title>
+	<title>Nombres Example</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -18,43 +18,35 @@
 			<label for="id">Id:</label>
 			<input type="text" class="form-control" id="id" placeholder="Ingresa tu id" name="id">
 		</div>
-		
+
 		<div class="form-group">
 			<label for="name">Nombre:</label>
 			<input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre" name="nombre">
 		</div>
 		<button onclick="guardarNombre()">Guardar</button>
 		<button onclick="actualizarNombre()">Actualizar</button>
-		<button type="submit" class="btn btn-default">Borrar</button>
-		<button type="submit" class="btn btn-default">Consultar</button>
+		<button onclick="borrarNombre()">Borrar</button>
+		<button onclick="consultarNombre()">Consultar</button>
+		<button onclick="obtenerNombre2()">Consultar2</button>
 
 
 
 		<h2>Nombres</h2>
-		<table class="table ">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Nombre</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>15</td>
-					<td>John</td>
-				</tr>
-				<tr>
-					<td>16</td>
-					<td>Ana</td>
-				</tr>
-				<tr>
-					<td>17</td>
-					<td>Andres</td>
-				</tr>
-			</tbody>
-		</table>
+		<div id="nombresDiv">
+		
+		</div>
+		
+		
+	
+		
+		<div id = "consultarNombres">
+	
 	</div>
+	</div> 
+	
+	
 
+	
 	<script>
 		function guardarNombre() {
 
@@ -86,9 +78,9 @@
 				contentType: 'application/json',
 				data: JSON.stringify(
 					{
-						"id" : $('#id').val(),
-						"nombre" : $('#name').val()
-					} 
+						"id": $('#id').val(),
+						"nombre": $('#name').val()
+					}
 				),
 				processData: false,
 				success: function (data, textStatus, jQxhr) {
@@ -98,10 +90,110 @@
 					console.log("Error " + JSON.stringify(jqXhr));
 				}
 			});
+		} 
+		
+		function borrarNombre() {
+
+			$.ajax({
+				url: '/11-abril/borrar',
+				dataType: 'json',
+				type: 'delete',
+				contentType: 'application/json',
+				data: JSON.stringify(
+					{
+						"id": $('#id').val()
+					}
+				),
+				processData: false,
+				success: function (data, textStatus, jQxhr) {
+					console.log("Todo bien" + JSON.stringify(data));
+				},
+				error: function (jqXhr, textStatus, errorThrown) {
+					console.log("Error " + JSON.stringify(jqXhr));
+				}
+			});
+		} 
+		function consultarNombre() {
+
+			$.ajax({
+				url: '/11-abril/obtener',
+				dataType: 'json',
+				type: 'get',
+				contentType: 'application/json',
+				processData: false,
+				success: function (data, textStatus, jQxhr) {
+					console.log("Todo bien" + JSON.stringify(data));
+					
+					generateHTML(data);
+				},
+				error: function (jqXhr, textStatus, errorThrown) {
+					console.log("Error " + JSON.stringify(jqXhr));
+				}
+			});
 		}
 
 
-	</script>
+	function generateHTML(jsonResponse){
+		let tableHTML =  `<table class="table ">
+				<tr>
+					<th>Id</th>
+					<th>Nombre</th>
+				</tr>
+		`;
+		 
+		for(var i = 0; i < jsonResponse.length; i++) {
+		    let obj = jsonResponse[i];
+		    tableHTML += `<tr>
+					<td>${ obj["id"] }</td>
+					<td>${ obj["nombre"] }</td>
+				</tr>
+			`; 
+		}
+		tableHTML +=`</table>`;
+		
+		document.getElementById("nombresDiv").innerHTML = tableHTML; 
+	
+	} 
+	
+	
+	
+	function obtenerNombre2() {
+
+			$.ajax({
+				url: '/11-abril/obtener',
+				dataType: 'json',
+				type: 'get',
+				contentType: 'application/json',
+				processData: false,
+				success: function (data, textStatus, jQxhr) {
+					console.log("Todo bien" + JSON.stringify(data));
+					hacerHTML(data);
+				},
+				error: function (jqXhr, textStatus, errorThrown) {
+					console.log("Error " + JSON.stringify(data));
+				}
+			});
+		}
+	
+	function hacerHTML(arregloJson ) {
+		let miHTML = `<table class="table ">
+				<tr>
+					<th>Id</th>
+					<th>Nombre</th>
+				</tr>`;
+		for(let index = 0; index < arregloJson.length; index++){
+			let regitro = arregloJson[index]; 
+			miHTML+=`<tr>
+					<td>${regitro["id"]}</td>
+					<td>${regitro["nombre"]}</td>
+				</tr>`;
+		}		
+		miHTML += "</table>"; 
+			document.getElementById("consultarNombres").innerHTML=miHTML;
+	}
+	</script> 
+	
+	
 </body>
 
 </html>
